# lotto-contracts

./: .gitignore  README.md  rust-toolchain.toml
ink/: Cargo.toml  README.md
ink/artifacts/: lotto_contract.contract  lotto_contract.json  lotto_contract.wasm
ink/contracts/dapp_staking/: Cargo.toml  lib.rs  rust-toolchain.toml
ink/contracts/lotto/: Cargo.toml  lib.rs
ink/integration_tests/: Cargo.toml  lib.rs
ink/logics/: Cargo.toml
ink/logics/traits/: config.rs  error.rs  mod.rs  raffle.rs  reward.rs
phat/: README.md
phat/artifacts/: lotto_draw.contract  lotto_draw.json  lotto_draw.wasm
phat/contracts/draw/: Cargo.toml  lib.rs
phat/contracts/lotto_draw/: .env_shibuya  Cargo.toml  README.md  lib.rs
