[package]
name = "lotto_draw"
version = "0.1.1"
authors = ["GuiGou"]
edition = "2021"

# Necessary due to the cargo bug bug: https://github.com/rust-lang/cargo/issues/10118
[profile.release]
overflow-checks = false

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

serde = { version = "1.0.171", default-features = false, features = ["derive", "alloc"]}
serde-json-core = { version = "0.4.0" }

sp-core = { version = "30", default-features = false, features = ["serde"]}

pink-extension = { version = "0.4.2", default-features = false }
phat_offchain_rollup = { git = "https://github.com/Phala-Network/phat-offchain-rollup" , default-features = false, features = ["ink"] }

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.10.0"
pink-extension-runtime = { version = "0.4.2", default-features = false }
hex-literal = "0.4.1"
hex = { version = "0.4", default-features = false }

[build-dependencies]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "phat_offchain_rollup/std",
    "pink-extension/std",
    "serde-json-core/std",
    "sp-core/std",
]
ink-as-dependency = []
logging = ["phat_offchain_rollup/logging"]
