[package]
name = "lotto_draw"
version = "1.1.0"
authors = ["GuiGou"]
edition = "2021"

# Necessary due to the cargo bug bug: https://github.com/rust-lang/cargo/issues/10118
[profile.release]
overflow-checks = false

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"], optional = true }

serde = { version = "1", default-features = false, features = ["derive", "alloc"]}
serde-json-core = { version = "0.6.0" }

sp-core = { version = "34.0.0", default-features = false, features = ["serde"]}

pink-extension = { version = "0.5.1", default-features = false }
phat_offchain_rollup = { git = "https://github.com/GuiGou12358/phat-offchain-rollup", default-features = false, features = ["ink", "logging"] }
subrpc = { package = "pink-subrpc", git = "https://github.com/GuiGou12358/phala-blockchain", branch = "test-logging", default-features = false, optional = true }

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.10.0"
pink-extension-runtime = { version = "0.4.6", default-features = false }
hex-literal = "0.4.1"
hex = { version = "0.4", default-features = false }

[build-dependencies]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "phat_offchain_rollup/std",
    "subrpc/std",
    "pink-extension/std",
    "serde-json-core/std",
    "sp-core/std",
]
ink-as-dependency = []
logging = ["phat_offchain_rollup/logging"]
